--- a/customer_styl.css
+++ b/customer_styl.css
@@ -353,6 +353,85 @@ img {
     color: #008080;
 }
 
+@media(max-width:1192px){
+    #aa-about-us{
+        display: inline;
+        float: left;
+        width: 100%;
+        margin: 400px 0 5%;
+    }
+}
 
 
+@media(max-width:480px){
+    #aa-about-us{
+        display: inline;
+        float: left;
+        width: 100%;
+        margin: 100px 0 5%;
+    }
+    .aa-title .title{
+        font-size: 20px;
+    }
+    .aa-title .title span{
+        color: #008080;
+    
+    }
+    .about-us-content .content h2{
+        font-size: 20px;
+    }
+    .about-us-content .content .mySlides p{
+        font-size: 5px;
+    }
+    .about-us-content .content .mySlides .about-image img{
+        width: 100%;
+        height: 300px;
 
+    }
+    .card {
+        height:auto;
+        width: 80%;
+        border-radius: 40px;
+        box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25), -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
+        cursor: pointer;
+        transition: 0.4s;
+    }
+    
+    .card .card_image {
+        max-width: 100%;
+        height: 100%;
+        border-radius: 10px;
+    }
+    
+    .card .card_image img {
+        width: 60%;
+        height: 50%;
+        border-radius: 40px;
+        object-fit: cover;
+    }
+    
+    .card .card_title {
+        text-align: center;
+        border-radius: 0px 0px 40px 40px;
+        font-family: sans-serif;
+        font-weight: bold;
+        font-size: 30px;
+        margin-top: -80px;
+        height: 40px;
+    }
+    
+    .card:hover {
+        transform: scale(0.9, 0.9);
+        box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
+            -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
+    }
+    
+    .title-white {
+        color: white;
+    }
+    
+    .title-black {
+        color: black;
+    }
+    
+}
