--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ img {
 	display: inline;
 	width: 100%;
 	height: 100%;
-	background: url(assets/images/header-bg.gif)	 no-repeat center center fixed; 
+	background: url(assets/images/head.gif)	 no-repeat center center fixed; 
 	background-size: cover;
 }
 
@@ -538,25 +538,23 @@ img {
 }
 
 .about-image {
-	width: 100%;
-	position: relative;
-	left: 20%;
-	top: 30%;
+	width: 350px;
 
+}
+.about-image img{
+	width: 100%;
+	margin-left: 15%;
 }
 
 .about-us-content {
 	margin: 5% 0;
-	display: flex;
-	justify-content: first baseline;
+	
 	color: #000;
 }
 
 
 
-.col-md-5 {
-	float: left;
-}
+
 
 .about-image img {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -1130,6 +1128,7 @@ video {
 	opacity: 1;
 }
 */
+
 #web-team{
 	color: #ffffff;
 	display: inline;
@@ -1142,28 +1141,30 @@ video {
   padding:0;
   list-style:none;
 }
+.web-team ul li{
+	justify-content: center;
+	align-content: center
+}
 .web-team ul li .cnt-block{
+	max-width: 200px;
+	max-height: 300px;
 	box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
-
-	background: url("https://webgradients.com/public/webgradients_png/065%20Burning%20Spring.png") no-repeat center top / cover;
+	border-radius:10%;
 }
 .web-team .heading.heading-icon {
     display: block;
 }
 .web-team .padding-lg {
 	display: block;
-	padding-top: 60px;
 	padding-bottom: 60px;
 }
 .web-team .practice-area.padding-lg {
     padding-bottom: 55px;
-    padding-top: 55px;
 }
 .web-team .web-team .practice-area .inner{ 
      border:1px solid #999999; 
 	 text-align:center; 
 	 margin-bottom:28px; 
-	 padding:40px 25px;
 }
 .web-team .our-webcoderskull .cnt-block:hover {
     box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
@@ -1174,11 +1175,10 @@ video {
 	font-size:24px; 
 	font-weight:500;
 	font-family: 'Poppins', sans-serif;
-	padding: 10px 0;
 }
 .web-team .practice-area .inner p{ 
     font-size:14px; 
-	line-height:22px; 
+	line-height:16px; 
 	font-weight:400;
 }
 .practice-area .inner img{
@@ -1195,22 +1195,20 @@ video {
    margin: 0 0 10px;
 }
 .our-webcoderskull .cnt-block figure{
-   width:148px; 
-   height:148px; 
+   width:118px; 
+   height:118px; 
    border-radius:100%; 
    display:inline-block;
-   margin-bottom: 10px;
 }
 .our-webcoderskull .cnt-block img{ 
-   width:148px; 
-   height:148px; 
+   width:118px; 
+   height:118px; 
    border-radius:100%; 
 }
 .our-webcoderskull .cnt-block h3{ 
    color:#2a2a2a; 
    font-size:20px; 
    font-weight:500; 
-   padding:6px 0;
    text-transform:uppercase;
 }
 .our-webcoderskull .cnt-block h3 a{
@@ -1251,6 +1249,8 @@ video {
 .web-team:hover #team-cards{
 	display: block;
 }
+
+
 /*--------------------*/
 /* CONTACT */
 /*--------------------*/
@@ -1957,7 +1957,7 @@ input[type="radio"]:checked+label:after {
 @media(max-width:480px) {
 	.main-nav {
 		padding-top: 10px;
-		width: 200px;
+		width: 100%;
 	}
 
 	.main-nav ul li a {
@@ -1997,6 +1997,10 @@ input[type="radio"]:checked+label:after {
 		padding: 0;
 	}
 
+	.about-image img{
+		width: 60%;
+		margin: 0;
+	}
 	.howit-works-video {
 		background: none;
 		text-align: center;
@@ -2095,6 +2099,7 @@ input[type="radio"]:checked+label:after {
 		-webkit-box-shadow: 0 10px 50px rgba(0, 0, 0, 0.08);
 		box-shadow: 0 10px 50px rgba(0, 0, 0, 0.08);
 	}
+	
 
 	/*--------------------*/
 	/* HOW IT WORKS */
