--- a/customer_styl.css
+++ b/customer_styl.css
@@ -56,7 +56,7 @@ img {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #008080;
+    background-color: #ffffff;
     /* change if the mask should have another color then white */
     z-index: 99999;
     /* makes sure it stays on top */
@@ -70,7 +70,7 @@ img {
     /* centers the loading animation horizontally one the screen */
     top: 50%;
     /* centers the loading animation vertically one the screen */
-    background-image: url(assets/images/loader.gif);
+    background-image: url(assets/images/preloader.gif);
     /* path to your loading animation */
     background-repeat: no-repeat;
     background-position: center;
@@ -103,7 +103,7 @@ img {
 
 
 .main-nav {
-    background-color: #1d252e;
+    background-color: #ffffff;
     position: fixed;
     width: 100%;
     top: 0;
