--- a/style.css
+++ b/style.css
@@ -1145,8 +1145,6 @@ video {
 }
 .web-team ul li .cnt-block{
 	box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
-
-	background: url("https://webgradients.com/public/webgradients_png/065%20Burning%20Spring.png") no-repeat center top / cover;
 }
 .web-team .heading.heading-icon {
     display: block;
@@ -1575,7 +1573,7 @@ input[type="radio"]:checked+label:after {
 	border-top: 1px #fff ;
 	bottom: 0;
 	width: 100%;
-	background-color: #1d252e;
+	background-color: #ffffff;
 }
 
 /*--------------------*/
