--- a/style.css
+++ b/style.css
@@ -1432,7 +1432,7 @@ input[type="radio"]:checked+label:after {
 }
 .mailto{
 	justify-content: center;
-	background-color: rgba(15, 22, 30, 0.8);
+	background-color: #008080;
 	color: #ffffff;
 	font-size: 16px;
 	box-shadow: none;
