--- a/customer_styl.css
+++ b/customer_styl.css
@@ -93,7 +93,20 @@ img {
     z-index: 100000;
 	
 }
+.navbar-default .navbar-nav > li > a:hover{
+	color:#008080;
+}
+.navbar-default .navbar-nav > li > a:hover i{
+	color: #008080;
 
+}
+ .navbar-brand:hover p{
+	color: #008080;
+}
+
+.navbar-brand{
+	padding: auto;
+}
 
 #menu-btn {
     color: #008080;
@@ -162,7 +175,10 @@ img {
     max-height: 140%;
     max-width: 140%;
 }
+.navbar-default .navbar-nav>li>a{
+	padding: 20px;
 
+}
 
 
 /*--------------------*/
@@ -229,7 +245,7 @@ img {
     height:40%;;
     width: 80%;
     border-radius: 40px;
-    box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25), -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
+    box-shadow: 1px 1px 20px 4px rgba(0, 0, 0, 0.05), -2px -2px 20px 4px rgba(0, 0, 0, 0.12);
     cursor: pointer;
     transition: 0.4s;
 }
@@ -265,8 +281,8 @@ img {
 
 .card:hover {
     transform: scale(0.9, 0.9);
-    box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
-        -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
+    box-shadow: 2px 2px 10px 10px rgba(0, 0, 0, 0.15),
+        -5px -5px 30px 15px rgba(0, 0, 0, 0.12);
 }
 
 .title-white {
@@ -281,13 +297,12 @@ img {
 /* FOOTER */
 /*--------------------*/
 
-
 #footer {
     left: 0;
     bottom: 0;
     width: 100%;
     overflow: hidden;
-    background-color: rgb(233, 230, 230);
+    background-color: #fff;
     display: inline;
     float: left;
     padding: 40px 0 0;
@@ -334,7 +349,9 @@ img {
     text-decoration: none;
 }
 
-
+.footer-social .title-area{
+    margin: 0;
+}
 /*--------------------*/
 /* Social Media Links */
 /*--------------------*/
@@ -412,6 +429,8 @@ img {
 .title-area .title span {
     color: #008080;
 }
+.footer-social .title-area {
+margin-bottom:.0.5%;}   
 
 @media(max-width:1192px){
     #aa-about-us{
@@ -429,6 +448,11 @@ img {
         max-height: 140%;
         max-width: 140%;
     }
+    .navbar-default .navbar-nav>li>a{
+        padding: 10px;
+    
+    }
+
     #aa-about-us{
         display: inline;
         float: left;
