--- a/style.css
+++ b/style.css
@@ -1526,14 +1526,6 @@ input[type="radio"]:checked+label:after {
 .footer-social .title-area {
 margin-bottom:2%;}
 
-@media(max-width:1192px){
-    #aa-about-us{
-        display: inline;
-        float: left;
-        width: 100%;
-        margin: 400px 0 5%;
-    }
-}
 
 
 /*--------------------*/
@@ -2043,7 +2035,7 @@ margin-bottom:2%;}
 		height: 40px;
 		border-radius: 100%;
 		display: block;
-		background: linear-gradient(45deg, #00B5F5, #002A8F);
+		background: linear-gradient(45deg, #008080, #008080);
 		transition: all 265ms ease-out;
 	}
 
